--- a/package.json
+++ b/package.json
@@ -10,32 +10,35 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.7.1",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/masked-view": "^0.1.7",
     "flatmap": "0.0.3",
     "moment": "^2.24.0",
-    "native-base": "^2.13.8",
-    "react": "16.9.0",
-    "react-native": "0.61.5",
-    "react-native-circular-progress": "^1.3.4",
-    "react-native-gesture-handler": "^1.5.3",
-    "react-native-reanimated": "^1.7.0",
-    "react-native-safe-area-context": "^0.6.2",
-    "react-native-svg": "^10.1.0",
+    "native-base": "^2.13.12",
+    "react": "16.13.1",
+    "react-native": "0.62.2",
+    "react-native-circular-progress": "^1.3.6",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.8.0",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
+    "react-native-svg": "^12.0.3",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation": "^4.3.7",
+    "react-navigation-material-bottom-tabs": "^2.2.10",
+    "react-navigation-stack": "^2.3.11",
+    "react-navigation-tabs": "^2.8.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/runtime": "^7.8.3",
-    "@react-native-community/eslint-config": "^0.0.6",
-    "babel-jest": "^24.9.0",
+    "@babel/core": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
+    "@react-native-community/eslint-config": "^1.0.0",
+    "babel-jest": "^25.3.0",
     "eslint": "^6.8.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.4",
-    "react-test-renderer": "16.9.0"
+    "jest": "^25.3.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
